Enable CodeQL weekly scan

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -7,6 +7,8 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ main ]
     paths-ignore: [ '**/*.md' ]
+  schedule:
+    - cron: '25 9 * * 0'
 
 jobs:
   analyze:
