Use public CFS feed
Partially reverts db4eb52adf1775d846981fb766c8acf7e4573bc4.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,13 @@
 version: 2
 registries:
-  npm-azure:
+  npm:
     type: npm-registry
-    url: https://pkgs.dev.azure.com/mscodehub/PowerShellCore/_packaging/PowerShellCore_PublicPackages/npm/registry/
-    username: powershell
-    password: ${{ secrets.AZURE_NPM_PASSWORD }}
+    url: https://registry.npmjs.org/
 updates:
 - package-ecosystem: npm
   directory: "/"
   registries:
-    - npm-azure
+    - npm
   labels: [ ]
   schedule:
     interval: weekly
