--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,7 @@
 ; We use Dependabot to update our packages, so we want to add without a prefix
 save-exact=true
 ; We download from a private feed during the release process
-registry=https://pkgs.dev.azure.com/mscodehub/PowerShellCore/_packaging/PowerShellCore_PublicPackages/npm/registry/
+registry=https://pkgs.dev.azure.com/powershell/PowerShell/_packaging/powershell/npm/registry/
 always-auth=true
+; We want the lockfile to reference the default registry
+replace-registry-host=npmjs
