--- a/.pipelines/vscode-powershell-Official.yml
+++ b/.pipelines/vscode-powershell-Official.yml
@@ -71,10 +71,6 @@ extends:
             displayName: Use Node 18.x
             inputs:
               version: 18.x
-          - task: npmAuthenticate@0
-            displayName: Authenticate NPM with Azure Artifacts
-            inputs:
-              workingFile: .npmrc
           - task: PowerShell@2
             displayName: Install PSResources
             inputs:
@@ -120,15 +116,11 @@ extends:
             displayName: Use Node 18.x
             inputs:
               version: 18.x
-          - task: npmAuthenticate@0
-            displayName: Authenticate NPM with Azure Artifacts
-            inputs:
-              workingFile: .npmrc
           - task: UseDotNet@2
-            displayName: Use .NET 8.x SDK
+            displayName: Use .NET SDK
             inputs:
               packageType: sdk
-              version: 8.x
+              useGlobalJson: true
           - task: PowerShell@2
             displayName: Install PSResources
             inputs:
@@ -204,10 +196,6 @@ extends:
         steps:
         - download: current
           displayName: Download artifacts
-        - task: npmAuthenticate@0
-          displayName: Authenticate NPM with Azure Artifacts (for vsce)
-          inputs:
-            workingFile: .npmrc
         - pwsh: npm ci
           displayName: Install NPM packages (for vsce)
         - pwsh: |
