Remove `save-exact` from `.npmrc` and add `save`
Since we can no longer use Dependabot due to CFS,
we just have to update manually (with `--save`, but automatic).
Which means we need `^` semver so `npm update` does what we expect
(which is to update to the latest minor version).
Except for the VS Code types, those use `~` so we only get patch updates.
This is because it must match our engine version of VS Code.

Also just omit the resolved registry from the lockfile
(since the replace option didn't really work as expected)

--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,7 @@
-; We use Dependabot to update our packages, so we want to add without a prefix
-save-exact=true
-; We download from a private feed during the release process
+; We generally want to save install/update commands
+save=true
+; We use a public Azure Artifacts mirror
 registry=https://pkgs.dev.azure.com/powershell/PowerShell/_packaging/powershell/npm/registry/
 always-auth=true
-; We want the lockfile to reference the default registry
-replace-registry-host=npmjs
+; But we don't want references to it in the lockfile
+omit-lockfile-registry-resolved=true
