--- a/package.json
+++ b/package.json
@@ -73,43 +73,43 @@
     "onWalkthrough:PowerShell"
   ],
   "dependencies": {
-    "@vscode/extension-telemetry": "0.9.6",
-    "node-fetch": "2.7.0",
-    "semver": "7.6.0",
-    "untildify": "4.0.0",
-    "uuid": "9.0.1",
-    "vscode-languageclient": "9.0.1",
-    "vscode-languageserver-protocol": "3.17.5"
+    "@vscode/extension-telemetry": "^0.9.6",
+    "node-fetch": "^2.7.0",
+    "semver": "^7.6.0",
+    "untildify": "^4.0.0",
+    "uuid": "^9.0.1",
+    "vscode-languageclient": "^9.0.1",
+    "vscode-languageserver-protocol": "^3.17.5"
   },
   "devDependencies": {
-    "@types/mocha": "10.0.6",
-    "@types/mock-fs": "4.13.4",
-    "@types/node": "18.19.3",
-    "@types/node-fetch": "2.6.4",
-    "@types/rewire": "2.5.30",
-    "@types/semver": "7.5.8",
-    "@types/sinon": "17.0.3",
-    "@types/ungap__structured-clone": "1.2.0",
-    "@types/uuid": "9.0.8",
-    "@types/vscode": "1.82.0",
-    "@typescript-eslint/eslint-plugin": "7.6.0",
-    "@typescript-eslint/parser": "7.6.0",
-    "@ungap/structured-clone": "1.2.0",
-    "@vscode/debugprotocol": "1.65.0",
-    "@vscode/test-electron": "2.3.9",
-    "@vscode/vsce": "2.24.0",
-    "esbuild": "0.20.2",
-    "eslint": "8.57.0",
-    "eslint-plugin-header": "3.1.1",
-    "glob": "10.3.12",
-    "mocha": "10.4.0",
-    "mocha-explorer-launcher-scripts": "0.4.0",
-    "mocha-multi-reporters": "1.5.1",
-    "mock-fs": "5.2.0",
-    "rewire": "7.0.0",
-    "sinon": "17.0.1",
-    "source-map-support": "0.5.21",
-    "typescript": "5.4.4"
+    "@types/mocha": "^10.0.6",
+    "@types/mock-fs": "^4.13.4",
+    "@types/node": "^18.19.3",
+    "@types/node-fetch": "^2.6.4",
+    "@types/rewire": "^2.5.30",
+    "@types/semver": "^7.5.8",
+    "@types/sinon": "^17.0.3",
+    "@types/ungap__structured-clone": "^1.2.0",
+    "@types/uuid": "^9.0.8",
+    "@types/vscode": "~1.82.0",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
+    "@ungap/structured-clone": "^1.2.0",
+    "@vscode/debugprotocol": "^1.65.0",
+    "@vscode/test-electron": "^2.3.9",
+    "@vscode/vsce": "^2.24.0",
+    "esbuild": "^0.20.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-header": "^3.1.1",
+    "glob": "^10.3.12",
+    "mocha": "^10.4.0",
+    "mocha-explorer-launcher-scripts": "^0.4.0",
+    "mocha-multi-reporters": "^1.5.1",
+    "mock-fs": "^5.2.0",
+    "rewire": "^7.0.0",
+    "sinon": "^17.0.1",
+    "source-map-support": "^0.5.21",
+    "typescript": "^5.4.4"
   },
   "extensionDependencies": [
     "vscode.powershell"
