--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
   "devDependencies": {
     "@types/mocha": "^10.0.6",
     "@types/mock-fs": "^4.13.4",
-    "@types/node": "^18.19.31",
+    "@types/node": "~18.15.0",
     "@types/node-fetch": "^2.6.11",
     "@types/rewire": "^2.5.30",
     "@types/semver": "^7.5.8",
@@ -92,8 +92,8 @@
     "@types/ungap__structured-clone": "^1.2.0",
     "@types/uuid": "^9.0.8",
     "@types/vscode": "~1.82.0",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
     "@ungap/structured-clone": "^1.2.0",
     "@vscode/debugprotocol": "^1.65.0",
     "@vscode/test-electron": "^2.3.10",
@@ -101,7 +101,7 @@
     "esbuild": "^0.21.3",
     "eslint": "^8.57.0",
     "eslint-plugin-header": "^3.1.1",
-    "glob": "^10.3.15",
+    "glob": "^10.3.16",
     "mocha": "^10.4.0",
     "mocha-explorer-launcher-scripts": "^0.4.0",
     "mocha-multi-reporters": "^1.5.1",
