renaming ShouldGenerateAlias to create CreateAlias

--- a/package.json
+++ b/package.json
@@ -1013,10 +1013,10 @@
           "default": "off",
           "description": "Traces the communication between VS Code and the PowerShell Editor Services language server. **This setting is only meant for extension developers!**"
         },
-        "powershell.renameSymbol.shouldGenerateAlias": {
+        "powershell.renameSymbol.createAlias": {
           "type": "boolean",
           "default": true,
-          "description": "Should an Alias be genereted when renaming a function parameter"
+          "description": "Should an Alias be created when renaming a function parameter"
         }
       }
     },
