--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,42 +33,28 @@
       "error",
       "always"
     ],
-    "@typescript-eslint/explicit-function-return-type": [
-      "error"
-    ],
+    "@typescript-eslint/explicit-function-return-type": "error",
+    "@typescript-eslint/no-empty-object-type": "off",
     "@typescript-eslint/no-floating-promises": [
       "error",
       {
         "ignoreVoid": true
       }
     ],
-    "@typescript-eslint/no-non-null-assertion": [
-      "off"
-    ],
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-require-imports": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
         "argsIgnorePattern": "^_"
       }
     ],
-    "@typescript-eslint/no-unsafe-argument": [
-      "off"
-    ],
-    "@typescript-eslint/no-unsafe-assignment": [
-      "off"
-    ],
-    "@typescript-eslint/no-unsafe-call": [
-      "off"
-    ],
-    "@typescript-eslint/no-unsafe-member-access": [
-      "off"
-    ],
-    "@typescript-eslint/no-unsafe-return": [
-      "off"
-    ],
-    "@typescript-eslint/restrict-template-expressions": [
-      "off"
-    ],
+    "@typescript-eslint/no-unsafe-argument": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-call": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off",
+    "@typescript-eslint/no-unsafe-return": "off",
+    "@typescript-eslint/restrict-template-expressions": "off",
     "@typescript-eslint/prefer-nullish-coalescing": [
       "error",
       {
