--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
   "optionalDependencies": {
     "@types/mocha": "^10.0.7",
     "@types/mock-fs": "^4.13.4",
-    "@types/node": "~18.15.0",
+    "@types/node": "^18.19.50",
     "@types/node-fetch": "^2.6.11",
     "@types/rewire": "^2.5.30",
     "@types/semver": "^7.5.8",
@@ -103,7 +103,7 @@
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^8.57.0",
     "eslint-plugin-header": "^3.1.1",
-    "glob": "^10.4.5",
+    "glob": "^11.0.0",
     "mocha": "^10.7.3",
     "mocha-explorer-launcher-scripts": "^0.4.0",
     "mocha-multi-reporters": "^1.5.1",
