--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "publisher": "ms-vscode",
   "description": "Develop PowerShell modules, commands and scripts in Visual Studio Code!",
   "engines": {
-    "vscode": "^1.82.0"
+    "vscode": "^1.94.0"
   },
   "author": "Microsoft Corporation",
   "license": "SEE LICENSE IN LICENSE.txt",
@@ -55,22 +55,9 @@
   "activationEvents": [
     "onDebugResolve:PowerShell",
     "onLanguage:powershell",
-    "onCommand:PowerShell.OpenExamplesFolder",
     "onCommand:PowerShell.PickPSHostProcess",
     "onCommand:PowerShell.PickRunspace",
-    "onCommand:PowerShell.SpecifyScriptArgs",
-    "onCommand:PowerShell.ShowSessionConsole",
-    "onCommand:PowerShell.ShowSessionMenu",
-    "onCommand:PowerShell.RestartSession",
-    "onCommand:PowerShell.ShowLogs",
-    "onCommand:PowerShell.OpenLogFolder",
-    "onCommand:PowerShell.GenerateBugReport",
-    "onCommand:PowerShell.OpenExamplesFolder",
-    "onCommand:PowerShell.EnableISEMode",
-    "onCommand:PowerShell.DisableISEMode",
-    "onCommand:PowerShell.ToggleISEMode",
-    "onView:PowerShellCommands",
-    "onWalkthrough:PowerShell"
+    "onCommand:PowerShell.SpecifyScriptArgs"
   ],
   "dependencies": {
     "@vscode/extension-telemetry": "^0.9.7",
@@ -82,24 +69,24 @@
     "vscode-languageserver-protocol": "^3.17.5"
   },
   "devDependencies": {
-    "@vscode/vsce": "^3.1.0",
+    "@vscode/vsce": "^3.1.1",
     "esbuild": "^0.21.5"
   },
   "optionalDependencies": {
-    "@types/mocha": "^10.0.7",
+    "@types/mocha": "^10.0.9",
     "@types/mock-fs": "^4.13.4",
-    "@types/node": "^18.19.50",
+    "@types/node": "^20.16.11",
     "@types/node-fetch": "^2.6.11",
     "@types/rewire": "^2.5.30",
     "@types/semver": "^7.5.8",
     "@types/sinon": "^17.0.3",
     "@types/ungap__structured-clone": "^1.2.0",
     "@types/uuid": "^9.0.8",
-    "@types/vscode": "~1.82.0",
-    "@typescript-eslint/eslint-plugin": "^8.5.0",
-    "@typescript-eslint/parser": "^8.5.0",
+    "@types/vscode": "~1.94.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
     "@ungap/structured-clone": "^1.2.0",
-    "@vscode/debugprotocol": "^1.67.0",
+    "@vscode/debugprotocol": "^1.68.0",
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^8.57.0",
     "eslint-plugin-header": "^3.1.1",
@@ -107,11 +94,11 @@
     "mocha": "^10.7.3",
     "mocha-explorer-launcher-scripts": "^0.4.0",
     "mocha-multi-reporters": "^1.5.1",
-    "mock-fs": "^5.2.0",
+    "mock-fs": "^5.3.0",
     "rewire": "^7.0.0",
     "sinon": "^18.0.1",
     "source-map-support": "^0.5.21",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
   "extensionDependencies": [
     "vscode.powershell"
@@ -921,7 +908,6 @@
             "Use the Call operator `&` to launch the script, for example, `& 'C:\\Data\\MyScript.ps1'`"
           ],
           "markdownDescription": "Sets the operator used to launch scripts."
-
         },
         "powershell.developer.bundledModulesPath": {
           "type": "string",
