Fix GitHub release task
Since ADO now releases from a commit that does not exist on GitHub.

--- a/.pipelines/vscode-powershell-Official.yml
+++ b/.pipelines/vscode-powershell-Official.yml
@@ -193,6 +193,7 @@ extends:
           inputs:
             gitHubConnection: GitHub
             repositoryName: PowerShell/vscode-powershell
+            target: main
             assets: $(drop)/powershell-$(vsixVersion).vsix
             tagSource: userSpecifiedTag
             tag: v$(version)
