--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "publisher": "ms-vscode",
   "description": "Develop PowerShell modules, commands and scripts in Visual Studio Code!",
   "engines": {
-    "vscode": "^1.94.0"
+    "vscode": "^1.96.0"
   },
   "author": "Microsoft Corporation",
   "license": "SEE LICENSE IN LICENSE.txt",
@@ -73,24 +73,25 @@
     "esbuild": "^0.21.5"
   },
   "optionalDependencies": {
+    "@tsconfig/node20": "^20.1.4",
     "@types/mocha": "^10.0.10",
     "@types/mock-fs": "^4.13.4",
-    "@types/node": "^20.17.9",
+    "@types/node": "^20.17.14",
     "@types/node-fetch": "^2.6.12",
     "@types/rewire": "^2.5.30",
     "@types/semver": "^7.5.8",
     "@types/sinon": "^17.0.3",
     "@types/ungap__structured-clone": "^1.2.0",
     "@types/uuid": "^9.0.8",
-    "@types/vscode": "~1.94.0",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@typescript-eslint/parser": "^8.17.0",
-    "@ungap/structured-clone": "^1.2.0",
+    "@types/vscode": "~1.96.0",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "@ungap/structured-clone": "^1.2.1",
     "@vscode/debugprotocol": "^1.68.0",
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^8.57.0",
     "eslint-plugin-header": "^3.1.1",
-    "glob": "^11.0.0",
+    "glob": "^11.0.1",
     "mocha": "^10.8.2",
     "mocha-explorer-launcher-scripts": "^0.4.0",
     "mocha-multi-reporters": "^1.5.1",
@@ -98,7 +99,7 @@
     "rewire": "^7.0.0",
     "sinon": "^18.0.1",
     "source-map-support": "^0.5.21",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   },
   "extensionDependencies": [
     "vscode.powershell"
