--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,15 @@
+// NOTE: The TypeScript compiler is only used for building the tests (and
+// the sources which the tests need). The extension is built with `esbuild`.
 {
+  "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
-    // NOTE: The TypeScript compiler is only used for building the tests (and
-    // the sources which the tests need). The extension is built with `esbuild`.
-    "module": "commonjs",
-    "target": "ES2022",
-    "lib": [
-      "ES2022",
-      "DOM"
-    ],
     "sourceMap": true,
     "rootDir": ".",
-    "strict": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "useUnknownInCatchVariables": true
   },
