Fix tests and update OneBranch pipeline
PowerShell 7.5 was released so the update test needed its usual fix.
Ironically, OneBranch now uses 7.4 so we can rely on PSResourceGet existing.

--- a/.pipelines/vscode-powershell-Official.yml
+++ b/.pipelines/vscode-powershell-Official.yml
@@ -107,10 +107,7 @@ extends:
               $manifest = Test-ModuleManifest $(Build.SourcesDirectory)/modules/PowerShellEditorServices/PowerShellEditorServices.psd1
               Write-Host Using PowerShellEditorServices v$($manifest.Version)
             displayName: PowerShellEditorServices version
-          - pwsh: |
-              Register-PSRepository -Name CFS -SourceLocation "https://pkgs.dev.azure.com/powershell/PowerShell/_packaging/powershell/nuget/v2" -InstallationPolicy Trusted
-              Install-Module -Repository CFS -Name Microsoft.PowerShell.PSResourceGet
-              ./tools/installPSResources.ps1 -PSRepository CFS
+          - pwsh: ./tools/installPSResources.ps1 -PSRepository CFS
             displayName: Install PSResources
           - pwsh: Invoke-Build Build -Configuration $(BuildConfiguration)
             displayName: Build
