--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "esbuild": "^0.25.4"
   },
   "optionalDependencies": {
-    "@tsconfig/node20": "^20.1.5",
+    "@eslint/js": "^9.26.0",
     "@types/mocha": "^10.0.10",
     "@types/mock-fs": "^4.13.4",
     "@types/node": "^20.17.47",
@@ -84,22 +84,23 @@
     "@types/ungap__structured-clone": "^1.2.0",
     "@types/uuid": "^9.0.8",
     "@types/vscode": "~1.96.0",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
     "@ungap/structured-clone": "^1.3.0",
     "@vscode/debugprotocol": "^1.68.0",
     "@vscode/test-electron": "^2.5.2",
-    "eslint": "^8.57.0",
-    "eslint-plugin-header": "^3.1.1",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.5",
     "glob": "^11.0.2",
     "mocha": "^11.2.2",
     "mocha-explorer-launcher-scripts": "^0.4.0",
     "mocha-multi-reporters": "^1.5.1",
     "mock-fs": "^5.5.0",
-    "rewire": "^7.0.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "sinon": "^19.0.5",
     "source-map-support": "^0.5.21",
-    "typescript": "^5.8.3"
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1"
   },
   "extensionDependencies": [
     "vscode.powershell"
@@ -111,9 +112,9 @@
     "lint": "eslint src test --ext .ts",
     "package": "vsce package --out out/ --no-gitHubIssueLinking",
     "publish": "vsce publish",
-    "compile-test": "npm run compile && tsc --incremental",
-    "watch-tests": "npm run compile-test -- --watch",
-    "test": "npm run compile-test && node ./test/runTests.js"
+    "compile-test": "esbuild ./test/runTestsInner.ts --outdir=dist --bundle --external:vscode --platform=node",
+    "pretest": "npm run compile && npm run compile-test",
+    "test": "tsx ./test/runTests.ts"
   },
   "contributes": {
     "breakpoints": [
