--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
     "@types/mock-fs": "^4.13.4",
     "@types/node": "^20.17.47",
     "@types/node-fetch": "^2.6.12",
-    "@types/rewire": "^2.5.30",
     "@types/semver": "^7.7.0",
     "@types/sinon": "^17.0.4",
     "@types/ungap__structured-clone": "^1.2.0",
@@ -86,10 +85,11 @@
     "@types/vscode": "~1.96.0",
     "@ungap/structured-clone": "^1.3.0",
     "@vscode/debugprotocol": "^1.68.0",
+    "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.5.2",
+    "esbuild-register": "^3.6.0",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
-    "glob": "^11.0.2",
     "mocha": "^11.2.2",
     "mocha-explorer-launcher-scripts": "^0.4.0",
     "mocha-multi-reporters": "^1.5.1",
@@ -98,7 +98,6 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "sinon": "^19.0.5",
     "source-map-support": "^0.5.21",
-    "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1"
   },
@@ -112,9 +111,8 @@
     "lint": "eslint src test --ext .ts",
     "package": "vsce package --out out/ --no-gitHubIssueLinking",
     "publish": "vsce publish",
-    "compile-test": "esbuild ./test/runTestsInner.ts --outdir=dist --bundle --external:vscode --platform=node",
-    "pretest": "npm run compile && npm run compile-test",
-    "test": "tsx ./test/runTests.ts"
+    "pretest": "npm run compile",
+    "test": "vscode-test"
   },
   "contributes": {
     "breakpoints": [
