--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,9 @@
 	"hostRequirements": {
 		"cpus": 4 // Primarily for GitHub Codespaces, as the 2 CPU is not generally good enough for C# compilation
 	},
-	"image": "./Dockerfile",
+	"build": {
+		"dockerfile": "Dockerfile"
+	},
 	"features": {
 		"ghcr.io/devcontainers/features/node:1": {
 			"nvmVersion": "latest", // Can be used to change node versions as needed
