Convert ESLint config and add Prettier

--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,7 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 insert_final_newline = true
+trim_trailing_whitespace = true
 
 [*.{json,yaml,yml,code-workspace}]
 indent_size = 2
