--- a/package.json
+++ b/package.json
@@ -109,6 +109,9 @@
     "pretest": "npm run compile",
     "test": "vscode-test"
   },
+  "prettier": {
+    "plugins": ["prettier-plugin-organize-imports"]
+  },
   "contributes": {
     "breakpoints": [
       {
