Setup formatting check task
Specificially not using Prettier for Markdown.

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "compile": "esbuild ./src/extension.ts --outdir=dist --sourcemap --bundle --external:vscode --platform=node",
     "watch": "npm run compile -- --watch",
     "lint": "eslint src test --ext .ts",
+    "format": "prettier --check '**/*.{ts,json,yml,mjs,code-workspace}'",
     "package": "vsce package --out out/ --no-gitHubIssueLinking",
     "publish": "vsce publish",
     "pretest": "npm run compile",
